updated materialize links and order page styling

--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -3,14 +3,18 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Example</h5>
+          <h5 class="card-title">Products</h5>
           <p>
-            <strong>ID</strong>: {{example.id}}</p>
+            <strong>ID</strong>: {{product.id}}</p>
           <p>
-          <p>
-            <strong>Text</strong>: {{example.text}}</p>
-          <p>
-            <strong>Description:</strong> {{example.description}}</p>
+            <p>
+              <strong>Name</strong>: {{product.prodName}}</p>
+            <p>
+              <strong>Catagory:</strong> {{product.prodCategory}}
+            </p>
+            <p>
+              <strong>On Hand:</strong> {{product.prodOnHand}}
+            </p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
