--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,21 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+<div id='home'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-8 offset-2'>
+        <h1>Order Master</h1>
+        <form class='mb-4' action='POST'>
+          <div class='form-group flow-text'>
+            <label for='products-text'>Products Search</label>
+            <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <button id='submit' class='btn btn-primary float-right'>Submit</button>
         </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
+        <h3>Products:</h3>
+        <ul id='product-list' class='list-group'>
+          {{#each product}}
+          <li data-id='{{this.id}}' class='list-group-item'>
+            <a href='product/{{this.id}}'>{{this.text}}</a>
+            <button class='btn btn-danger float-right delete'>ｘ</button>
           </li>
           {{/each}}
         </ul>
@@ -28,6 +23,6 @@
     </div>
   </div>
 </div>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+ <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='/js/index.js'></script>
