--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,22 +1,44 @@
+body {
+  background: rgba(245, 244, 244, 0.89);
+}
 .list-group-item {
   line-height: 2.5;
 }
+
 h2 {
   margin-top: 0px;
   padding-top: 15px;
 }
 
+h5 {
+  margin-top: 10px;
+  color: rgb(73, 73, 73);
+}
+
+.btn {
+  background-color: rgba(58, 58, 255, 0.842);
+}
 .jumbo{
+  background: url('../images/market-601580_1280.jpg') center;
+  z-index: 5;
   min-height: 15vh;
 }
+
 .background{
-  margin-top: -20px;
+  background: rgba(139, 139, 160, 0.486);
   min-height: 80vh;
-  border-radius: 0% 0% 10% 10%;
+  border-radius: 0px 0px 10px 10px;
 }
+
 .padIt {
   margin: 10px;
 }
+
 label {
-  color: rgb(54, 54, 54);
+  color: rgba(54, 54, 54, 0.678);
+}
+
+.list-group-item {
+  background-color: rgba(255, 255, 255, 0.808);
+  border-radius: 4px;
 }
