--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,12 +8,12 @@
         <div class='col-8 offset-2'>
           <form class='mb-4 login-form' action='GET'>
             <div class="input-field">
-              <input id="first_name" type="text" class="validate">
+              <input id="first_name" type="text" class="validate login-bg">
               <label for="first_name">User Name</label>
             </div>
             <div class="row">
               <div class="input-field">
-                <input id="password" type="password" class="validate">
+                <input id="password" type="password" class="validate login-bg">
                 <label for="password">Password</label>
               </div>
             </div>
