--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -30,6 +30,7 @@
             <li class="waves-effect page"><a href="#!">4</a></li>
             <li class="waves-effect page"><a href="#!">5</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+          <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
         </div>
       </div>
