--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -8,6 +8,7 @@
         <div class='col-8 offset-2'>
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
+               <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
               <label for='orders-text'><h5>Order Search</h5></label>
               <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
             </div>
@@ -31,6 +32,7 @@
             <li class="waves-effect page"><a href="#!">5</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
           <button id='logOut' class='btn btn-primary right'>Log out</button>
+           <button id='back' class='btn btn-primary right'><a href='/superUser'>Back</a></button>
           </ul>
         </div>
       </div>
