--- a/views/superUser.handlebars
+++ b/views/superUser.handlebars
@@ -9,9 +9,10 @@
                     <h4>Select one:</h4>
                     <ul id='product-list' class='list-group'>
                         <li>
-                            <button id='super' class='btn btn-primary'>Supervisor</button>
-                            <button id='super' class='btn btn-primary'>Orders</button>
-                            <button id='super' class='btn btn-primary'>Users</button>
+                            <button id='super' class='btn btn-primary supervisorPage'><a href='/supervisor'>Supervisor</a></button>
+                            <button id='super' class='btn btn-primary ordersPage'><a href='./order'>Orders</a></button>
+                            <button id='super' class='btn btn-primary usersPage'><a href='./user'>Users</a></button>
+                            <button id='logOut' class='btn btn-primary right'>Log out</button>
                         </li>
                     </ul>
                 </div>
