--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -8,10 +8,8 @@
         <div class='col-8 offset-2'>
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
-              <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
-              <label for='products-text'>
-                <h5>Products Search</h5></label>
-                <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
+              <label for='products-text'><h5>Products Search</h5></label>
+              <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
           </form>
@@ -32,8 +30,7 @@
             <li class="waves-effect page"><a href="#!">4</a></li>
             <li class="waves-effect page"><a href="#!">5</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-            <button id='logOut' class='btn btn-primary right'>Log out</button>
-            <button id='back' class='btn btn-primary right'><a href='/superUser'>Back</a></button>
+          <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
         </div>
       </div>
