updated lists to tables, corrected layout for pagination buttons on small screens connected order, user db to html apis. html routes still need correction to use api routes instead.

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -8,31 +8,40 @@
         <div class='col-8 offset-2'>
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
-               <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
+              <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
               <label for='orders-text'><h5>Order Search</h5></label>
               <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
           </form>
           <h4>Orders:</h4>
-          <ul id='order-list' class='list-group'>
-            {{#each order}}
-            <li data-id='{{this.id}}' class='list-group-item'>
-              <a href='orders/{{this.id}}'>{{this.prodName}} | {{this.prodCategory}} | {{this.prodOnHand}}</a>
-              {{> addOne}}
-            </li>
-            <hr> {{/each}}
-          </ul>
+          <thead id='order-list' class='list-group'>
+            <table>
+              <tr>
+                <th>Name</th>
+                <th>Unit of Issue</th>
+                <th>Item QTY</th>
+                <th>Add</th>
+              </tr>
+          </thead>
+          <tbody data-id='{{this.id}}' class='list-group-item'>
+            {{#each orderline}}
+            <tr><a href='orders/{{this.olID}}'>
+              <td>{{this.prodID}}</td>
+              <td>{{this.olUnitofIssue}}</td>
+              <td>{{this.olQuantity}}</td>
+              <td>{{> addOne}}</td>
+           </a></tr>
+          {{/each}}
+          </tbody>
+          </table>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
             <li class="waves-effect page"><a href="#!">2</a></li>
             <li class="waves-effect page"><a href="#!">3</a></li>
-            <li class="waves-effect page"><a href="#!">4</a></li>
-            <li class="waves-effect page"><a href="#!">5</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-          <button id='logOut' class='btn btn-primary right'>Log out</button>
-           <button id='back' class='btn btn-primary right'><a href='/superUser'>Back</a></button>
+            <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
         </div>
       </div>
