--- a/views/supervisor.handlebars
+++ b/views/supervisor.handlebars
@@ -16,24 +16,33 @@
             <button id='submit' class='btn btn-primary right'>Submit</button>
           </form>
           <h4>Products:</h4>
-          <ul id='product-list' class='list-group'>
+           <thead id='product-list' class='list-group'>
+            <table>
+              <tr>
+                <th>Name</th>
+                <th>Category</th>
+                <th>On Hand</th>
+                <th>Add</th>
+              </tr>
+          </thead>
+          <tbody data-id='{{this.id}}' class='list-group-item'>
             {{#each product}}
-            <li data-id='{{this.id}}' class='list-group-item'>
-              <a href='products/{{this.id}}'>{{this.prodName}} | {{this.prodCategory}} | {{this.prodOnHand}}</a>
-              {{> addOne}}
-            </li>
-            <hr> {{/each}}
-          </ul>
+            <tr><a href='products/{{this.id}}'>
+              <td>{{this.prodName}}</td>
+              <td>{{this.prodCategory}}</td>
+              <td>{{this.prodOnHand}}</td>
+              <td>{{> addOne}}</td>
+           </a></tr>
+          {{/each}}
+          </tbody>
+          </table>
           <ul class="pagination">
             <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
             <li class="active page"><a href="#!">1</a></li>
             <li class="waves-effect page"><a href="#!">2</a></li>
             <li class="waves-effect page"><a href="#!">3</a></li>
-            <li class="waves-effect page"><a href="#!">4</a></li>
-            <li class="waves-effect page"><a href="#!">5</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
             <button id='logOut' class='btn btn-primary right'>Log out</button>
-            <button id='back' class='btn btn-primary right'><a href='/superUser'>Back</a></button>
           </ul>
         </div>
       </div>
