--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -14,7 +14,7 @@
             <button id='submit' class='btn btn-primary right'>Submit</button>
           </form>
           <h4>Products:</h4>
-           <thead id='product-list' class='list-group'>
+          <thead id='product-list' class='list-group'>
             <table>
               <tr>
                 <th>Name</th>
@@ -25,13 +25,22 @@
           </thead>
           <tbody data-id='{{this.id}}' class='list-group-item'>
             {{#each product}}
-            <tr><a href='products/{{this.id}}'>
-              <td>{{this.prodName}}</td>
+            <tr>
+              <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div class="modal" id="modal{{this.id}}">
+                  <div class="modal-content">
+                    <h4>{{this.prodName}}</h4>
+                    <p>{{this.prodCategory}}</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                  </div>
+                </div>
+              </td>
               <td>{{this.prodCategory}}</td>
               <td>{{this.prodOnHand}}</td>
               <td>{{> addOne}}</td>
-           </a></tr>
-          {{/each}}
+              </a></tr>
+            {{/each}}
           </tbody>
           </table>
           <ul class="pagination">
@@ -40,13 +49,14 @@
             <li class="waves-effect page"><a href="#!">2</a></li>
             <li class="waves-effect page"><a href="#!">3</a></li>
             <li class="waves-effect page"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-          <button id='logOut' class='btn btn-primary right'>Log out</button>
+            <button id='logOut' class='btn btn-primary right'>Log out</button>
           </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
+<script src='/js/products.js'></script>
