--- a/views/supervisor.handlebars
+++ b/views/supervisor.handlebars
@@ -11,12 +11,12 @@
               <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
               <label for='products-text'>
                 <h5>Products Search</h5></label>
-                <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
+              <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
           </form>
           <h4>Products:</h4>
-           <thead id='product-list' class='list-group'>
+          <thead id='product-list' class='list-group'>
             <table>
               <tr>
                 <th>Name</th>
@@ -27,13 +27,21 @@
           </thead>
           <tbody data-id='{{this.id}}' class='list-group-item'>
             {{#each product}}
-            <tr><a href='products/{{this.id}}'>
-              <td>{{this.prodName}}</td>
+            <tr>
+              <td><a href='#modal{{this.id}}' class='modal-trigger'>{{this.prodName}}</a><div class="modal" id="modal{{this.id}}">
+              <div class="modal-content">
+                <h4>{{this.prodName}}</h4>
+                <p>{{this.prodCategory}}</p>
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+              </div>
+            </div></td>
               <td>{{this.prodCategory}}</td>
               <td>{{this.prodOnHand}}</td>
               <td>{{> addOne}}</td>
-           </a></tr>
-          {{/each}}
+            </tr>
+            {{/each}}
           </tbody>
           </table>
           <ul class="pagination">
@@ -49,6 +57,9 @@
     </div>
   </div>
 </div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
+
+
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
 <script src='/js/index.js'></script>
+<script src='/js/products.js'></script>
