--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -8,7 +8,7 @@
         <div class='col-8 offset-2'>
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
-              <label for='products-text'><h5>Products Search</h5></label>
+              <h5>Products Search</h5>
               <input type='text' id='product-text' class='form-control' aria-describedby='product-text' placeholder='Enter Product Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
