--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,16 +8,16 @@
         <div class='col-8 offset-2'>
           <form class='mb-4 login-form' action='GET'>
             <div class="input-field">
-              <input id="first_name" type="text" class="validate login-bg">
+              <input id="first_name" type="text" class="validate">
               <label for="first_name">User Name</label>
             </div>
             <div class="row">
               <div class="input-field">
-                <input id="password" type="password" class="validate login-bg">
+                <input id="password" type="password" class="validate">
                 <label for="password">Password</label>
               </div>
             </div>
-            <button id='submit' class='btn btn-primary right login-submit'>Submit</button>
+            <button id='submit' class='btn btn-primary right login-submit'><a href='/superUser'>Log In</a></button>
           </form>
         </div>
       </div>
