--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -9,7 +9,7 @@
           <form class='mb-4' action='GET'>
             <div class='form-group flow-text'>
               <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
-              <label for='orders-text'><h5>Order Search</h5></label>
+              <h5>Order Search</h5>
               <input type='text' id='order-text' class='form-control' aria-describedby='order-text' placeholder='Enter order Text'>
             </div>
             <button id='submit' class='btn btn-primary right'>Submit</button>
