--- a/views/superUser.handlebars
+++ b/views/superUser.handlebars
@@ -3,7 +3,7 @@
         <h2 class='white-text center header'>Name Here</h2>
     </div>
     <div class='container'>
-        <div class='login z-depth-3'>
+        <div class='background login z-depth-3'>
             <div class='row padIt'>
                 <div class='col-8 offset-2'>
                     <h4>Select one:</h4>
