--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -9,7 +9,7 @@
                     <form class='mb-4' action='GET'>
                         <div class='form-group flow-text'>
                             <button id='back' class='btn btn-primary right top-back'><a href='/superUser'>Back</a></button>
-                            <label for='users-text'><h5>Users</h5></label>
+                            <h5>Users</h5>
                             <input type='text' id='user-text' class='form-control' aria-describedby='user-text' placeholder='Enter user'>
 
                         </div>
