changed user role site to show supervisor/employee instead of 0/1

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -39,7 +39,11 @@
                                     </div>
                                 </div>
                             </td>
-                            <td>{{this.usRole}}</td>
+                            {{#if this.usRole}}
+                            <td>Supervisor</td>
+                            {{else}}
+                            <td>Employee</td>
+                            {{/if}}
                             <td>{{this.usPhone}}</td>
                             <td>{{> addOne}}</td>
                             </a></tr>
