updated partials, header, sass.

--- a/views/superUser.handlebars
+++ b/views/superUser.handlebars
@@ -1,6 +1,6 @@
 <div id='home'>
-    <div class='jumbo'>
-        <h2 class='white-text center header'>Name Here</h2>
+    <div>
+        {{> header}}
     </div>
     <div class='container'>
         <div class='background login z-depth-3'>
